<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/pad_top"
            android:paddingRight="@dimen/pad_top"
            android:paddingTop="@dimen/pad_top">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_name"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:inputType="textCapWords"/>

            </android.support.design.widget.TextInputLayout>

            <DatePicker
                android:id="@+id/dpDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:nextFocusDown="@id/tvTelefono"
                android:paddingTop="@dimen/pad_top"
                android:nextFocusForward="@id/tvTelefono">


            </DatePicker>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tvTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_phone"
                    android:nextFocusDown="@id/tvMail"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:inputType="phone"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tvMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_mail"
                    android:nextFocusDown="@id/tvDesc"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tvDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_desc"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btSig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_button_sig"
                android:theme="@style/RaisedButton" />

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>